--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.11.74</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
